WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
294016
[css-anchor-position-1] Inline box anchor fails to register after name mutation
https://bugs.webkit.org/show_bug.cgi?id=294016
Summary
[css-anchor-position-1] Inline box anchor fails to register after name mutation
Antti Koivisto
Reported
2025-06-04 05:16:35 PDT
The previous fix for this missed the inline box (<span>) case.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-06-04 05:16:53 PDT
<
rdar://problem/152570856
>
Antti Koivisto
Comment 2
2025-06-04 05:29:48 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/46317
EWS
Comment 3
2025-06-04 06:47:42 PDT
Committed
295810@main
(29f4978a079e): <
https://commits.webkit.org/295810@main
> Reviewed commits have been landed. Closing PR #46317 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug