[css-anchor-position-1] Inline box anchor fails to register after name mutation https://bugs.webkit.org/show_bug.cgi?id=294016 rdar://152570856

Reviewed by Alan Baradlay.

The previous fix for this (in RenderBox) missed the inline box (<span>) case.

* LayoutTests/TestExpectations:
* Source/WebCore/rendering/RenderBox.cpp:
(WebCore::RenderBox::styleWillChange):

Testing in RenderBoxModelObject is sufficient.

* Source/WebCore/rendering/RenderBoxModelObject.cpp:

Test for anchor status correctly.

(WebCore::RenderBoxModelObject::styleWillChange):
* Source/WebCore/style/AnchorPositionEvaluator.cpp:
(WebCore::Style::AnchorPositionEvaluator::isAnchor):
* Source/WebCore/style/AnchorPositionEvaluator.h:

Factor into a function.

Canonical link: https://commits.webkit.org/295810@main